# JavaToPythonTranspiler

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  sample.java
java_to_python_transpiler/: __init__.py  java_lexer.py  java_to_python.py  scan_and_lex_input.py  test_java_to_python.py  token_classes.py  token_objects.py  transpile_methods.py
